--- a/assets/resources/styles/style.css
+++ b/assets/resources/styles/style.css
@@ -14,6 +14,10 @@
   text-align: right;
 }
 
+#img-locacao {
+  width: 60px;
+}
+
 #p-criar-conta {
   text-align: center;
 }
@@ -47,16 +51,24 @@ form {
   margin-bottom: 10%;
 }
 
-h2 {
-  margin-left: 3%;
-}
-
 h1 {
   font-size: 400%;
   text-align: center;
   font-style: thin;
   margin-top: 40px;
   margin-bottom: 50px;
+}
+
+h2 {
+  margin-left: 3%;
+}
+
+h3 {
+  margin: 40px;
+}
+
+h4 {
+  text-align: center;
 }
 
 footer>p {
