--- a/assets/resources/styles/style.css
+++ b/assets/resources/styles/style.css
@@ -1,87 +1,110 @@
 .exibir-conteudo {
-  display: block;
+    display: block;
 }
 
 .ocultar-conteudo {
-  display: none;
+    display: none;
 }
 
 .cor-principal {
-  background-color: #228B22;
+    background-color: #228B22;
 }
 
 .tamanho-logo {
-  text-align: right;
+    text-align: right;
+}
+
+#div-imagens-veiculo>img {
+    width: 60%;
+    height: 40%;
+    margin-right: 20%;
+    margin-left: 20%;
 }
 
 #img-locacao {
-  width: 60px;
+    width: 60px;
 }
 
 #p-criar-conta {
-  text-align: center;
+    text-align: center;
 }
 
 #button-cadastro {
-  background-color: #32CD32;
-  width: 100%;
-  margin-bottom: 30px;
-  margin-top: 30px;
-  margin-right: 10px;
+    background-color: #32CD32;
+    width: 100%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-right: 10px;
 }
 
 #button-cancelar-cadastro {
-  background-color: red;
-  width: 100%;
-  margin-bottom: 30px;
-  margin-top: 30px;
+    background-color: red;
+    width: 100%;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 #button-login {
-  background-color: #32CD32;
-  width: 100%;
-  margin-bottom: 30px;
-  margin-top: 30px;
+    background-color: #32CD32;
+    width: 100%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+#button-pesquisar-cliente {
+    background-color: #32CD32;
+    width: 100%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-right: 10px;
+}
+
+#button-pesquisar-usuario {
+    background-color: #32CD32;
+    width: 100%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-right: 10px;
 }
 
 form {
-  margin-left: 3%;
-  margin-right: 3%;
-  margin-top: 3%;
-  margin-bottom: 10%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 3%;
+    margin-bottom: 10%;
 }
 
 h1 {
-  font-size: 400%;
-  text-align: center;
-  font-style: thin;
-  margin-top: 40px;
-  margin-bottom: 50px;
+    font-size: 400%;
+    text-align: center;
+    font-style: thin;
+    margin-top: 40px;
+    margin-bottom: 50px;
 }
 
 h2 {
-  margin-left: 3%;
+    margin-left: 3%;
 }
 
 h3 {
-  margin: 40px;
+    margin: 40px;
 }
 
 h4 {
-  text-align: center;
+    text-align: center;
 }
 
 footer>p {
-  color: white;
-  text-align: center;
+    color: white;
+    text-align: center;
 }
 
 body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 
 main {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
