--- a/assets/resources/styles/style.css
+++ b/assets/resources/styles/style.css
@@ -14,6 +14,24 @@
     text-align: right;
 }
 
+span {
+    margin: 10px;
+}
+
+#form-categoria {
+    text-align: center;
+}
+
+.pagination {
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.pagination li.disable {
+    color: green;
+}
+
 #div-imagens-veiculo>img {
     width: 60%;
     height: 40%;
