--- a/assets/resources/styles/style.css
+++ b/assets/resources/styles/style.css
@@ -14,12 +14,72 @@
     text-align: right;
 }
 
-span {
+#div-dados-cliente {
+    margin-right: 10%;
+}
+
+#div-dados-cliente h4 {
+    text-align: left;
+}
+
+#div-dados-cliente span {
+    font-weight: bold;
+}
+
+#div-dados-locacao h4 {
+    text-align: left;
+}
+
+#div-dados-locacao span {
+    font-weight: bold;
+}
+
+#div-dados-locacao>p:last-child {
+    color: red;
+}
+
+label span {
     margin: 10px;
+}
+
+[type="checkbox"].filled-in:not(:checked)+span:not(.lever):after {
+    height: 20px;
+    width: 20px;
+    background-color: transparent;
+    border: 2px solid #fafafa;
+    top: 0px;
+    z-index: 0;
+}
+
+[type="checkbox"].filled-in:checked+span:not(.lever):after {
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #e65100;
+    background-color: #e65100;
+    z-index: 0;
 }
 
 #form-categoria {
     text-align: center;
+    background-color: #228B22;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#form-categoria>label {
+    color: white;
+}
+
+#form-categoria>h5 {
+    color: white;
+}
+
+#form-categoria>button {
+    background-color: #e65100;
 }
 
 .pagination {
