--- a/assets/resources/styles/style.css
+++ b/assets/resources/styles/style.css
@@ -1,3 +1,8 @@
+#p-mensagem {
+    text-align: center;
+    color: red;
+}
+
 .exibir-conteudo {
     display: block;
 }
@@ -60,22 +65,31 @@ label span {
     z-index: 0;
 }
 
+.card-panel {
+    padding: 5px;
+}
+
+.card {
+    margin: 30px;
+}
+
 #form-categoria {
     text-align: center;
     background-color: #228B22;
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 80%;
+    margin-right: 10%;
+    margin-left: 10%;
     margin-top: 50px;
     margin-bottom: 50px;
     border-radius: 10px;
 }
 
-#form-categoria>label {
-    color: white;
+#form-categoria h5 {
+    white-space: nowrap;
+    color: #ffffff;
 }
 
-#form-categoria>h5 {
+#form-categoria>label {
     color: white;
 }
 
@@ -130,26 +144,21 @@ label span {
     margin-top: 30px;
 }
 
-#button-pesquisar-cliente {
-    background-color: #32CD32;
+.button-pesquisar {
+    background-color: #e65100;
     width: 100%;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    margin-right: 10px;
+    margin-top: 15px;
 }
 
-#button-pesquisar-usuario {
-    background-color: #32CD32;
+#button-enviar-oficina {
     width: 100%;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    margin-right: 10px;
+    background-color: #e65100;
 }
 
 form {
     margin-left: 3%;
     margin-right: 3%;
-    margin-top: 3%;
+    margin-top: 8%;
     margin-bottom: 10%;
 }
 
@@ -167,6 +176,7 @@ h2 {
 
 h3 {
     margin: 40px;
+    text-align: center;
 }
 
 h4 {
