--- a/assets/resources/styles/style.css
+++ b/assets/resources/styles/style.css
@@ -1,8 +1,3 @@
-#p-mensagem {
-    text-align: center;
-    color: red;
-}
-
 .exibir-conteudo {
     display: block;
 }
@@ -17,6 +12,28 @@
 
 .tamanho-logo {
     text-align: right;
+}
+
+#p-mensagem {
+    text-align: center;
+    color: red;
+}
+
+#form-enviar-oficina h4 {
+    margin-top: 60px;
+}
+
+#form-enviar-oficina span {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#form-enviar-oficina p {
+    font-size: 20px;
+}
+
+#div-problema-veiculo {
+    margin-top: 30px;
 }
 
 #div-dados-cliente {
@@ -39,8 +56,14 @@
     font-weight: bold;
 }
 
-#div-dados-locacao>p:last-child {
+#div-dados-locacao>p:nth-child(7) {
     color: red;
+    font-size: 20px;
+}
+
+#div-dados-locacao>p:last-child {
+    color: green;
+    font-size: 20px;
 }
 
 label span {
@@ -114,31 +137,24 @@ label span {
     margin-left: 20%;
 }
 
-#img-locacao {
+.modal img {
     width: 60px;
+    margin-top: 30px;
+    margin-left: 28%;
+}
+
+.modal p {
+    width: 100%;
+    margin-left: 10%;
+    text-align: center;
 }
 
 #p-criar-conta {
     text-align: center;
 }
 
-#button-cadastro {
-    background-color: #32CD32;
-    width: 100%;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    margin-right: 10px;
-}
-
-#button-cancelar-cadastro {
-    background-color: red;
-    width: 100%;
-    margin-bottom: 30px;
-    margin-top: 30px;
-}
-
 #button-login {
-    background-color: #32CD32;
+    background-color: #228B22;
     width: 100%;
     margin-bottom: 30px;
     margin-top: 30px;
@@ -148,6 +164,44 @@ label span {
     background-color: #e65100;
     width: 100%;
     margin-top: 15px;
+}
+
+.button-pesquisar:hover {
+    background-color: #e65100;
+}
+
+.button-pesquisar:focus {
+    background-color: #e65100;
+}
+
+.button-confirmar {
+    background-color: #228B22;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.button-confirmar:hover {
+    background-color: #228B22;
+}
+
+.button-confirmar:focus {
+    background-color: #228B22;
+}
+
+.button-cancelar {
+    background-color: #d50000;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.button-cancelar:hover {
+    background-color: #d50000;
+}
+
+.button-cancelar:focus {
+    background-color: #d50000;
 }
 
 #button-enviar-oficina {
