--- a/assets/resources/styles/style.css
+++ b/assets/resources/styles/style.css
@@ -19,10 +19,6 @@
     background-color: #228B22;
 }
 
-.tamanho-logo {
-    text-align: right;
-}
-
 #div-filtro-data {
     margin-top: 30px;
 }
@@ -45,11 +41,6 @@
 
 #form-nova-locacao p {
     font-size: 20px;
-}
-
-#p-mensagem {
-    text-align: center;
-    color: red;
 }
 
 #form-enviar-oficina h4 {
@@ -182,15 +173,19 @@ label span {
     text-align: center;
 }
 
-#p-criar-conta {
-    text-align: center;
-}
-
 #button-login {
     background-color: #228B22;
     width: 100%;
     margin-bottom: 30px;
     margin-top: 30px;
+}
+
+
+/*Notificação login sem senha*/
+
+#p-mensagem {
+    text-align: center;
+    color: red;
 }
 
 .button-pesquisar {
