rotas para visões básicas criadas

--- a/RentACar/publico/css/style.css
+++ b/RentACar/publico/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'edgeracer';
-    src: url('edgeracer.ttf');
+    src: url('/RentACar/publico/fonts/edgeracer.ttf');
 }
 
 .table-total{
