--- a/RentACar/publico/css/style.css
+++ b/RentACar/publico/css/style.css
@@ -3,8 +3,31 @@
     margin-bottom: 40px;
 }
 
-.negrito{
-    font-weight: bold;
+.balao-flash-sucesso{
+    border: 1px solid #228B22;
+    background-color: #a4ffa4;
+    border-radius: 7px;
+    text-align: center;
+    width: 50%;
+    margin-right: 25%;
+    margin-left: 25%;
+
+}
+
+.balao-flash-erro{
+    border: 1px solid #ff0000;
+    background-color: #ffb4b4;
+    border-radius: 7px;
+    text-align: center;
+    width: 50%;
+    margin-right: 25%;
+    margin-left: 25%;
+
+}
+
+.balaoFlash > p{
+    color: black;
+    font-size: 16px;
 }
 
 .font-edgeracer {
