--- a/RentACar/publico/css/style.css
+++ b/RentACar/publico/css/style.css
@@ -3,6 +3,12 @@
     margin-bottom: 40px;
 }
 
+#multa{
+    color: #ff0000;
+    text-align: center;
+    font-size: 30px;
+}
+
 #total-locacao{
     color: #228B22;
     text-align: center;
