paginação sem filtros - veículos na oficina

--- a/RentACar/publico/css/style.css
+++ b/RentACar/publico/css/style.css
@@ -3,6 +3,11 @@
     margin-bottom: 40px;
 }
 
+.button-pagina{
+    background-color: #e65100;
+    margin:50px;
+}
+
 #div-informacao-veiculo{
     margin-top: 20px;
     margin-bottom: 105px;
